--- a/index.html
+++ b/index.html
@@ -38,5 +38,224 @@
             </ul>
         </div>
     </nav>
+
+    <div class="container-fluid bg-light">
+        <div class="row">
+            <!-- Left sidebar -->
+            <div class="col-md-2 border-right bg-white">
+                <div class="row pt-5 pl-2">
+                    <div class="col-md-6">
+                        <p class="font-weight-bold">Repositories</p>
+                    </div>
+                    <div class="col-md-6">
+                        <button class="btn btn-primary float-right">New</button>
+                    </div>
+                </div>
+                <div class="row pt-2 pl-2">
+                    <div class="col-md-12">
+                        <input class="form-control" type="search" placeholder="Find a repository..." aria-label="Search">
+                    </div>
+                </div>
+                <nav class="nav flex-column pt-2 pl-2">
+                    <a class="pt-1" href="#">Name/Repo1</a>
+                    <a class="pt-1" href="#">Name/Repo2</a>
+                    <a class="pt-1" href="#">Name/Repo3</a>
+                    <a class="pt-1" href="#">Name/Repo4</a>
+                    <a class="pt-1" href="#">Name/Repo5</a>
+                </nav>
+                <div class="pl-2 pt-3">
+                    <small class="text-black-50">Show more...</small>
+                </div>
+            </div>
+            <!-- Main content -->
+            <div class="col-md-7 pl-5 pt-4">
+                <div class="row pt-2">
+                    <div class="col-md-1">
+                        Icon
+                    </div>
+                    <div class="col-md-11 p-0">
+                        <b>Jim Nasium</b> started following you
+                    </div>
+                </div>
+                <div class="row pt-2 pb-3 border-bottom">
+                    <div class="col-md-11 offset-1 border p-3">
+                        <div class="row">
+                            <div class="col-md-1">
+                                Icon
+                            </div>
+                            <div class="col-md-9 p-0">
+                                <div class="row">
+                                    Stuff and
+                                </div>
+                                <div class="row">
+                                    Things
+                                </div>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-secondary float-right">Follow</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row pt-2">
+                    <div class="col-md-1">
+                        Icon
+                    </div>
+                    <div class="col-md-11 p-0">
+                        <b>Jim Nasium</b> started following you
+                    </div>
+                </div>
+                <div class="row pt-2 pb-3 border-bottom">
+                    <div class="col-md-11 offset-1 border p-3">
+                        <div class="row">
+                            <div class="col-md-1">
+                                Icon
+                            </div>
+                            <div class="col-md-9 p-0">
+                                <div class="row">
+                                    Stuff and
+                                </div>
+                                <div class="row">
+                                    Things
+                                </div>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-secondary float-right">Follow</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row pt-2">
+                    <div class="col-md-1">
+                        Icon
+                    </div>
+                    <div class="col-md-11 p-0">
+                        <b>Jim Nasium</b> started following you
+                    </div>
+                </div>
+                <div class="row pt-2 pb-3 border-bottom">
+                    <div class="col-md-11 offset-1 border p-3">
+                        <div class="row">
+                            <div class="col-md-1">
+                                Icon
+                            </div>
+                            <div class="col-md-9 p-0">
+                                <div class="row">
+                                    Stuff and
+                                </div>
+                                <div class="row">
+                                    Things
+                                </div>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-secondary float-right">Follow</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row pt-2">
+                    <div class="col-md-1">
+                        Icon
+                    </div>
+                    <div class="col-md-11 p-0">
+                        <b>Jim Nasium</b> started following you
+                    </div>
+                </div>
+                <div class="row pt-2 pb-3 border-bottom">
+                    <div class="col-md-11 offset-1 border p-3">
+                        <div class="row">
+                            <div class="col-md-1">
+                                Icon
+                            </div>
+                            <div class="col-md-9 p-0">
+                                <div class="row">
+                                    Stuff and
+                                </div>
+                                <div class="row">
+                                    Things
+                                </div>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-secondary float-right">Follow</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row pt-2">
+                    <div class="col-md-1">
+                        Icon
+                    </div>
+                    <div class="col-md-11 p-0">
+                        <b>Jim Nasium</b> started following you
+                    </div>
+                </div>
+                <div class="row pt-2 pb-3 border-bottom">
+                    <div class="col-md-11 offset-1 border p-3">
+                        <div class="row">
+                            <div class="col-md-1">
+                                Icon
+                            </div>
+                            <div class="col-md-9 p-0">
+                                <div class="row">
+                                    Stuff and
+                                </div>
+                                <div class="row">
+                                    Things
+                                </div>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-secondary float-right">Follow</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Right sidebar -->
+            <div class="col-md-2 pl-5">
+                <div class="row pt-4">
+                    Explore repositories
+                </div>
+                <div class="row pt-3 border-bottom">
+                        <div class="col">
+                        <div class="row">
+                            Title
+                        </div>
+                        <div class="row">
+                            <small>Description</small>
+                        </div>
+                        <div class="row pt-2 pb-2">
+                            Language
+                        </div>
+                    </div>
+                </div>
+                <div class="row pt-3 border-bottom">
+                        <div class="col">
+                        <div class="row">
+                            Title
+                        </div>
+                        <div class="row">
+                            <small>Description</small>
+                        </div>
+                        <div class="row pt-2 pb-2">
+                            Language
+                        </div>
+                    </div>
+                </div>
+                <div class="row pt-3 border-bottom">
+                        <div class="col">
+                        <div class="row">
+                            Title
+                        </div>
+                        <div class="row">
+                            <small>Description</small>
+                        </div>
+                        <div class="row pt-2 pb-2">
+                            Language
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
