Added icons and polished things up

--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#"><img src="GitHub-Mark.png" alt="Logo" height="32" width="32"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <form class="form-inline my-2 my-lg-0">
+        <form class="form-inline my-2 my-lg-0 bg-dark">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
@@ -36,6 +35,11 @@
                     <a class="nav-link" href="#">Explore<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
+            <div class="d-flex flex-row-reverse">
+                <img class="ml-2" src="profile.png" alt="Profile Picture" width="32" height="32">
+                <img class="ml-2" src="plus.png" width="32" height="32">
+                <img src="bell.png" width="32" height="32">
+            </div>
         </div>
     </nav>
 
@@ -48,7 +52,7 @@
                         <p class="font-weight-bold">Repositories</p>
                     </div>
                     <div class="col-md-6">
-                        <button class="btn btn-primary float-right">New</button>
+                        <button class="btn-sm btn-success float-right">New</button>
                     </div>
                 </div>
                 <div class="row pt-2 pl-2">
@@ -64,31 +68,32 @@
                     <a class="pt-1" href="#">Name/Repo5</a>
                 </nav>
                 <div class="pl-2 pt-3">
-                    <small class="text-black-50">Show more...</small>
+                    <a href="#"><small class="text-muted">Show more</small></a>
                 </div>
             </div>
             <!-- Main content -->
             <div class="col-md-7 pl-5 pt-4">
                 <div class="row pt-2">
-                    <div class="col-md-1">
-                        Icon
+                    <div class="col-md-1 pl-4">
+                        <img src="profile.png" alt="profile picture" width="32" height="32">
                     </div>
                     <div class="col-md-11 p-0">
                         <b>Jim Nasium</b> started following you
                     </div>
                 </div>
                 <div class="row pt-2 pb-3 border-bottom">
-                    <div class="col-md-11 offset-1 border p-3">
+                    <div class="col-md-11 offset-1 border p-3 bg-white rounded-sm">
                         <div class="row">
                             <div class="col-md-1">
-                                Icon
+                                <img src="profile.png" alt="profile picture" width="40" height="40">
                             </div>
-                            <div class="col-md-9 p-0">
+                            <div class="col-md-9 pl-3">
                                 <div class="row">
-                                    Stuff and
+                                    <p class="font-weight-bold m-0">Jim Nasium</p>
+                                    <small class="text-muted pl-2">Jim Nasium</small>
                                 </div>
                                 <div class="row">
-                                    Things
+                                    <small class="text-muted m-0">Things</small>
                                 </div>
                             </div>
                             <div class="col">
@@ -98,25 +103,26 @@
                     </div>
                 </div>
                 <div class="row pt-2">
-                    <div class="col-md-1">
-                        Icon
+                    <div class="col-md-1 pl-4">
+                        <img src="profile.png" alt="profile picture" width="32" height="32">
                     </div>
                     <div class="col-md-11 p-0">
                         <b>Jim Nasium</b> started following you
                     </div>
                 </div>
                 <div class="row pt-2 pb-3 border-bottom">
-                    <div class="col-md-11 offset-1 border p-3">
+                    <div class="col-md-11 offset-1 border p-3 bg-white rounded-sm">
                         <div class="row">
                             <div class="col-md-1">
-                                Icon
+                                <img src="profile.png" alt="profile picture" width="40" height="40">
                             </div>
-                            <div class="col-md-9 p-0">
+                            <div class="col-md-9 pl-3">
                                 <div class="row">
-                                    Stuff and
+                                    <p class="font-weight-bold m-0">Jim Nasium</p>
+                                    <small class="text-muted pl-2">Jim Nasium</small>
                                 </div>
                                 <div class="row">
-                                    Things
+                                    <small class="text-muted m-0">Things</small>
                                 </div>
                             </div>
                             <div class="col">
@@ -126,25 +132,26 @@
                     </div>
                 </div>
                 <div class="row pt-2">
-                    <div class="col-md-1">
-                        Icon
+                    <div class="col-md-1 pl-4">
+                        <img src="profile.png" alt="profile picture" width="32" height="32">
                     </div>
                     <div class="col-md-11 p-0">
                         <b>Jim Nasium</b> started following you
                     </div>
                 </div>
                 <div class="row pt-2 pb-3 border-bottom">
-                    <div class="col-md-11 offset-1 border p-3">
+                    <div class="col-md-11 offset-1 border p-3 bg-white rounded-sm">
                         <div class="row">
                             <div class="col-md-1">
-                                Icon
+                                <img src="profile.png" alt="profile picture" width="40" height="40">
                             </div>
-                            <div class="col-md-9 p-0">
+                            <div class="col-md-9 pl-3">
                                 <div class="row">
-                                    Stuff and
+                                    <p class="font-weight-bold m-0">Jim Nasium</p>
+                                    <small class="text-muted pl-2">Jim Nasium</small>
                                 </div>
                                 <div class="row">
-                                    Things
+                                    <small class="text-muted m-0">Things</small>
                                 </div>
                             </div>
                             <div class="col">
@@ -154,25 +161,26 @@
                     </div>
                 </div>
                 <div class="row pt-2">
-                    <div class="col-md-1">
-                        Icon
+                    <div class="col-md-1 pl-4">
+                        <img src="profile.png" alt="profile picture" width="32" height="32">
                     </div>
                     <div class="col-md-11 p-0">
                         <b>Jim Nasium</b> started following you
                     </div>
                 </div>
                 <div class="row pt-2 pb-3 border-bottom">
-                    <div class="col-md-11 offset-1 border p-3">
+                    <div class="col-md-11 offset-1 border p-3 bg-white rounded-sm">
                         <div class="row">
                             <div class="col-md-1">
-                                Icon
+                                <img src="profile.png" alt="profile picture" width="40" height="40">
                             </div>
-                            <div class="col-md-9 p-0">
+                            <div class="col-md-9 pl-3">
                                 <div class="row">
-                                    Stuff and
+                                    <p class="font-weight-bold m-0">Jim Nasium</p>
+                                    <small class="text-muted pl-2">Jim Nasium</small>
                                 </div>
                                 <div class="row">
-                                    Things
+                                    <small class="text-muted m-0">Things</small>
                                 </div>
                             </div>
                             <div class="col">
@@ -182,25 +190,84 @@
                     </div>
                 </div>
                 <div class="row pt-2">
-                    <div class="col-md-1">
-                        Icon
+                    <div class="col-md-1 pl-4">
+                        <img src="profile.png" alt="profile picture" width="32" height="32">
                     </div>
                     <div class="col-md-11 p-0">
                         <b>Jim Nasium</b> started following you
                     </div>
                 </div>
                 <div class="row pt-2 pb-3 border-bottom">
-                    <div class="col-md-11 offset-1 border p-3">
+                    <div class="col-md-11 offset-1 border p-3 bg-white rounded-sm">
                         <div class="row">
                             <div class="col-md-1">
-                                Icon
+                                <img src="profile.png" alt="profile picture" width="40" height="40">
                             </div>
-                            <div class="col-md-9 p-0">
+                            <div class="col-md-9 pl-3">
                                 <div class="row">
-                                    Stuff and
+                                    <p class="font-weight-bold m-0">Jim Nasium</p>
+                                    <small class="text-muted pl-2">Jim Nasium</small>
                                 </div>
                                 <div class="row">
-                                    Things
+                                    <small class="text-muted m-0">Things</small>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-secondary float-right">Follow</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row pt-2">
+                    <div class="col-md-1 pl-4">
+                        <img src="profile.png" alt="profile picture" width="32" height="32">
+                    </div>
+                    <div class="col-md-11 p-0">
+                        <b>Jim Nasium</b> started following you
+                    </div>
+                </div>
+                <div class="row pt-2 pb-3 border-bottom">
+                    <div class="col-md-11 offset-1 border p-3 bg-white rounded-sm">
+                        <div class="row">
+                            <div class="col-md-1">
+                                <img src="profile.png" alt="profile picture" width="40" height="40">
+                            </div>
+                            <div class="col-md-9 pl-3">
+                                <div class="row">
+                                    <p class="font-weight-bold m-0">Jim Nasium</p>
+                                    <small class="text-muted pl-2">Jim Nasium</small>
+                                </div>
+                                <div class="row">
+                                    <small class="text-muted m-0">Things</small>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-secondary float-right">Follow</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row pt-2">
+                    <div class="col-md-1 pl-4">
+                        <img src="profile.png" alt="profile picture" width="32" height="32">
+                    </div>
+                    <div class="col-md-11 p-0">
+                        <b>Jim Nasium</b> started following you
+                    </div>
+                </div>
+                <div class="row pt-2 pb-3 border-bottom">
+                    <div class="col-md-11 offset-1 border p-3 bg-white rounded-sm">
+                        <div class="row">
+                            <div class="col-md-1">
+                                <img src="profile.png" alt="profile picture" width="40" height="40">
+                            </div>
+                            <div class="col-md-9 pl-3">
+                                <div class="row">
+                                    <p class="font-weight-bold m-0">Jim Nasium</p>
+                                    <small class="text-muted pl-2">Jim Nasium</small>
+                                </div>
+                                <div class="row">
+                                    <small class="text-muted m-0">Things</small>
                                 </div>
                             </div>
                             <div class="col">
@@ -224,7 +291,7 @@
                             <small>Description</small>
                         </div>
                         <div class="row pt-2 pb-2">
-                            Language
+                            Languages
                         </div>
                     </div>
                 </div>
@@ -237,7 +304,7 @@
                             <small>Description</small>
                         </div>
                         <div class="row pt-2 pb-2">
-                            Language
+                            Languages
                         </div>
                     </div>
                 </div>
@@ -250,7 +317,7 @@
                             <small>Description</small>
                         </div>
                         <div class="row pt-2 pb-2">
-                            Language
+                            Languages
                         </div>
                     </div>
                 </div>
