--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </div>
     </nav>
 
+    <!-- Body -->
     <div class="container-fluid bg-light">
         <div class="row">
             <!-- Left sidebar -->
